# watermark-anything

./: README.md  pyproject.toml
wam/: __init__.py
wam/augmentation/: geometric.py
wam/utils/: image.py
